# Persona_Notebook

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  build-release.bat  package-lock.json  package.json  run-debug.bat  run-dev.bat  run-release.bat  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASING.md
scripts/: publish-release.ps1
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_proxy.rs  daily_insight.rs  global_closeout.rs  import_export.rs  mind.rs  mod.rs  personal_memory.rs  plan.rs  record.rs  score.rs  settings.rs  stat.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/db/repositories/: api_run_repo.rs  daily_review_repo.rs  dimension_repo.rs  ledger_repo.rs  mind_repo.rs  mod.rs  personal_memory_repo.rs  plan_repo.rs  record_repo.rs  rule_repo.rs  setting_repo.rs
src-tauri/src/models/: mind.rs  mod.rs  personal_memory.rs  plan.rs  record.rs  stat.rs
src-tauri/src/services/: ai_response_service.rs  export_service.rs  import_service.rs  mod.rs  rag_memory_service.rs
src/components/: CyberPanel.vue  PersonaAmbience.vue  TodayTaskTreeItem.vue
src/pages/: BondRelations.vue  Calendar.vue  DailyJournal.vue  Dashboard.vue  Ledger.vue  MonthPlan.vue  Reports.vue  Settings.vue  Tarot.vue  Today.vue  WeekPlan.vue
src/schemas/: record.ts  score.ts
启动入口/: README.txt  sync-release.ps1  开发模式.cmd  打开完整版.cmd  构建完整版.cmd
(+49 files in other folders)
